--- a/style.css
+++ b/style.css
@@ -1,14 +1,52 @@
 body {
     background-color: brown;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .start-btn{
     position: absolute;
+    top: 30%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.start-btn button{
+    font-size: 20px;
+    font-style: bold;
+    font-weight: 300;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+
 
 }
 
-.start-btn{
+.sub-box{
 
 
 }
 
+.container{
+    display: none;
+    width: 600px;
+    max-width: 80%;
+    background-color: white;
+    border-radius: 10px; 
+    padding: 20px;
+    box-shadow: 0 0 8px 3px;
+}
+
+.btn-grid{
+    display: grid;
+    gap: 20px;
+    margin: 15px 0;
+}
+
+.btn:hover { 
+    border-color: brown;
+}
