--- a/style.css
+++ b/style.css
@@ -30,9 +30,10 @@ body {
 
 
 }
-
+.hide{
+    display: none !important;
+}
 .container{
-    display: none;
     width: 600px;
     max-width: 80%;
     background-color: white;
