--- a/style.css
+++ b/style.css
@@ -9,10 +9,10 @@ body {
 
 #start-btn{
     position: absolute;
-    top: 30%;
-    display: flex;
+    top: 40%;
+    /* display: flex;
     justify-content: center;
-    align-items: center; 
+    align-items: center;  */
 }
 
 .start-btn button{
@@ -22,15 +22,42 @@ body {
     padding: 10px 20px;
     border-radius: 5px;
     cursor: pointer;
-
-
 }
 
-.header-box{
-    padding: 0;
-    margin: 0;
+ /* .start-btn button:hover{
+    border-color: brown;
+}  */
 
+.header-container{
+    background-color: white;
+    padding: 20px;
+    width: 550px;
+    max-width: 80%;
+    margin: 5px;
+    position: absolute;
+    top: 10%; 
+    border-radius: 10px;
+    /* display: flex;
+    justify-content: center;
+    align-items: center; */
+    box-shadow: 0 0 8px 3px;
+}
 
+ header {
+    margin-bottom: 15px;
+    display: flex;
+    justify-content: space-between;
+    align-items:center; 
+    padding-bottom: 2px;
+    border-bottom: 1px solid lightsalmon;
+} 
+
+.timer {
+    background-color: lightskyblue;
+    display: flex;
+    justify-content: space-around;
+    border-radius: 10px;
+    padding: 8px;
 
 }
 
@@ -39,18 +66,25 @@ body {
 
 }
 .container{
+    position: absolute;
+    top: 40%;
     width: 600px;
     max-width: 80%;
     background-color: white;
     border-radius: 10px; 
     padding: 20px;
     box-shadow: 0 0 8px 3px;
+    
+}
+
+.buttons {
+    cursor: pointer;
 }
 
 .btn-grid{
     display: grid;
     gap: 20px;
-    margin: 15px 0;
+    margin: 5px 0;
 }
 
 .btn:hover { 
