--- a/style.css
+++ b/style.css
@@ -8,14 +8,20 @@ body {
 }
 
 #start-btn{
+    background-color: lightsalmon;
     position: absolute;
     top: 40%;
+    right: 45%;
+    border-radius: 10px; 
+    padding: 20px;
+    box-shadow: 0 0 8px 2px;
     /* display: flex;
     justify-content: center;
     align-items: center;  */
 }
 
 .start-btn button{
+    color: white;
     font-size: 20px;
     font-style: bold;
     font-weight: 300;
@@ -53,7 +59,7 @@ body {
 } 
 
 .timer {
-    background-color: lightskyblue;
+    background-color: lightgrey;
     display: flex;
     justify-content: space-around;
     border-radius: 10px;
@@ -77,16 +83,43 @@ body {
     
 }
 
+#question{
+    font-size: 25px;
+    font-style: bold;
+    font-weight: 300;
+    padding: 10px 0px;
+    border-radius: 5px;
+    gap: 20px;
+    margin: 10px 0;
+    border-bottom: 1px solid lightsalmon;
+}
+
 .buttons {
+    display: flex;
+    justify-content: space-between;
+    padding: 20px;
     cursor: pointer;
 }
 
 .btn-grid{
     display: grid;
-    gap: 20px;
+    gap: 30px;
     margin: 5px 0;
 }
 
 .btn:hover { 
     border-color: brown;
 }
+
+.correct{
+    background-color: white;
+    color: green;
+    border-color: green;
+}
+
+.incorrect{
+    background-color: white;
+    color: red;
+    border-color: red;
+}
+
